jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL_LONG2-ending-QUOTATION_MARK4.shex
# STRING_LITERAL_LONG2 ending with QUOTATION_MARK4
# source: turtle-syntax-bad-string-06.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["""abc""""@en]
}
